[metadata]
name = vigenere-cipher
version = 0.1.0
description = Simple Vigenère cipher utilities
long_description = file: README.md
long_description_content_type = text/markdown
author = Tasos
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

[options]
py_modules = vigenere_cipher
python_requires = >=3.8
install_requires =

[options.entry_points]
console_scripts =
    vigenere = vigenere_cipher:main
